--- a/templates/riba/riba-admin/document/view_documents.html
+++ b/templates/riba/riba-admin/document/view_documents.html
@@ -50,7 +50,7 @@
     							<td class="w15p">$ {{temp.offer_price|floatformat:0}}</td>
     							<td class="w15p">{{temp.time_to_build}}</td>
 							    <td class="w10p">
-                                    <a class="changelink" href="/admin/upload-template/{{temp.id}}/">Edit</a>&nbsp;&nbsp;
+                                    <a class="changelink" href="/admin/document/upload-template/{{temp.id}}/">Edit</a>&nbsp;&nbsp;
                                     <a id="{{temp.id}}" href="" class="deletebin deletelink">Delete</a></td>
                             </tr>
                         </tbody>
