Fixed build document ui

--- a/templates/riba/riba-admin/document/questionnaire.html
+++ b/templates/riba/riba-admin/document/questionnaire.html
@@ -21,7 +21,7 @@
 {% block breadcrumbs %}
     <!-- Breadcrumbs -->
     <div class="breadcrumbs">
-        <a href="/admin/">Home</a>&nbsp;&raquo;&nbsp; <a href="/admin/document/">Documents</a>&nbsp;&raquo;&nbsp; Add
+        <a href="/admin/">Home</a>&nbsp;&raquo;&nbsp; <a href="/admin/document/">Documents</a>&nbsp;&raquo;&nbsp; {% if id %}{{template.title}}{% else %}Add{% endif %}
     </div>
     <!-- END Breadcrumbs -->
 {% endblock %}
@@ -29,7 +29,7 @@
 {% block content %}
 <div id="questionnaire-content" class="w100p">
     <form action="" method="POST" id="questionnaire" name="questionnaire" enctype="multipart/form-data">
-        {% document_tabs request "create-questionnaire" %}
+        {% document_tabs request "create-questionnaire" id template %}
         <div class="padding10" style="border:#3F4C6C 1px solid;">
         {% if errors %}
             <div>
@@ -124,6 +124,8 @@ $(document).ready(function() {
     $('.check_tabs').click(function(){
         var next_tab = $(this).attr('id');
         new_url = "/admin/document/" + next_tab;
+        var id = {{id}};
+        if(id) new_url += '/'+id+'/';
         location.href =  new_url;
     });
 
