--- a/templates/riba/riba-admin/document/tabs.html
+++ b/templates/riba/riba-admin/document/tabs.html
@@ -1,3 +1,6 @@
+{% if id and template %}
+    <h1>{{template.title}}</h1>
+{% endif %}
 <div id="document_tabs">
     <ul>
         {% for t in tabs %}
