--- a/templates/riba/riba-admin/document/upload_template.html
+++ b/templates/riba/riba-admin/document/upload_template.html
@@ -22,7 +22,7 @@
 {% block breadcrumbs %}
     <!-- Breadcrumbs -->
     <div class="breadcrumbs">
-        <a href="/admin/">Home</a>&nbsp;&raquo;&nbsp; <a href="/admin/document/">Documents</a>&nbsp;&raquo;&nbsp; Add
+        <a href="/admin/">Home</a>&nbsp;&raquo;&nbsp; <a href="/admin/document/">Documents</a>&nbsp;&raquo;&nbsp; {% if id %}{{template.title}}{% else %}Add{% endif %}
     </div>
     <!-- END Breadcrumbs -->
 {% endblock %}
@@ -30,7 +30,7 @@
 {% block content %}
 <div id="upload-template-content" class="w100p">
     <form action="" method="POST" id="upload_template" name="upload_template" enctype="multipart/form-data">
-        {% document_tabs request "upload-template" %}
+        {% document_tabs request "upload-template" id template %}
         <div class="padding10" style="border:#3F4C6C 1px solid;">
         {% if errors %}
             <div>
