--- a/templates/riba/web/home/home.html
+++ b/templates/riba/web/home/home.html
@@ -1,6 +1,83 @@
 {% extends "web/base.html" %}
+{% load web_tags %}
+
 {%block page_title%}Riba Business Lawyers{%endblock%}
 
 {% block content %}
-
+<div class="txt_top_space"> </div>
+<div class="txt_top_area"> 
+    <div class="lft_space"> </div>
+    <div class="top_txt"> 
+        <div class="top_txt_tab"> Our Services </div>
+        <div class="top_main_txt"> Riba provide essential services like Legal Tutor, Bulletin Bookshelf, Affiliate Club, Authors Club, Featured books, Legal Brief, Legal Dictionary and Platinum Membership. </div>
+    </div>
+    <div class="middle_space"> </div>
+    <div class="top_txt"> 
+        <div class="top_txt_tab"> Our Experts </div>
+        <div class="top_main_txt"> Riba provide essential services like Legal Tutor, Bulletin Bookshelf, Affiliate Club, Authors Club, Featured books, Legal Brief, Legal Dictionary and Platinum Membership. </div>
+    </div>
+    <div class="rght_space"> </div>
+    <div class="contact_img"> <img src="{% media_url request "images/web/contact.gif"%}" /> </div>
+    <div class="lft_space"> </div>
+</div>
+<div class="txt_middle_space"> </div>
+<div class="middle_txt_area"> 
+    <div class="s_lft_space"> </div>
+    <div class="s_middle_txt"> 
+        <div class="s_middle_txt_tab"> Latest Documents </div>
+        <div class="document_txt_area"> 
+            <div class="document_top"> 
+                <div class="document_top_txt"> 1. Will - Married or Defacto No Children </div>
+                <div class="document_top_txt"> 2. Will - Married or Defacto with Children </div>
+                <div class="document_top_txt"> 3. Will - Single No Children </div>
+            </div>
+            <div class="documents_bottom_txt_area"> 
+                <div class="documents_bottom_txt"> $ 77.00 </div>
+                <div class="documents_bottom_txt"> $ 77.00 </div>
+                <div class="documents_bottom_txt"> $ 99.00 </div>
+            </div>
+        </div>
+    </div>
+    <div class="s_rght_space"> </div>
+    <div class="law_firm_img"> <img src="{% media_url request "images/web/law_firm.gif"%}" /> </div>
+    <div class="s_lft_space"> </div>
+</div>
+<div class="txt_middle_space"> </div>
+<div class="m_txt"> 
+    <div class="m_lft_space"> </div>
+    <div class="categories_area"> 
+        <div class="categories_area_top"> Buy Documents</div>
+        <div class="categories"> 
+            <div class="categories_list"> Business Sales Documents </div>
+            <div class="categories_list"> Confidentiality or non-disclosure </div>
+            <div class="categories_list"> Contract Service Agreements </div>
+            <div class="categories_list"> Business Sales Documents </div>
+            <div class="categories_list"> Confidentiality or non-disclosure </div>
+            <div class="categories_list"> Contract Service Agreements </div>
+            <div class="categories_list"> Business Sales Documents </div>
+            <div class="categories_list"> Confidentiality or non-disclosure </div>
+            <div class="categories_list"> Contract Service Agreements </div>
+            <div class="categories_list"> Business Sales Documents </div>
+            <div class="categories_list"> Confidentiality or non-disclosure </div>
+            <div class="categories_list"> Contract Service Agreements </div>
+            <div class="categories_list"> Business Sales Documents </div>
+        </div>
+    </div>
+    <div class="m_m_space"> </div>
+    <div class="m_main_txt_area"> 
+        Riba Business Lawyers is an Australian law Firm  Estlablished in 1998. <p> <br />
+        Riba Business Lawyers offes legal advice and services to business people and enterprises throghout Queensland and Australia. 
+        <ul style="color:#FF0000">
+        <li> buying and selling businesses </li>
+        <li> business strures and asset protection </li>
+        <li> franchising advice and transactions </li>
+        <li> leasing advice and transactions </li>
+        <li> commercial litigation </li>
+        <li> buying and selling property </li>
+        </ul> <p> <br />
+        Our Head Office is Located in Maroochydore, on Queensland's Sunshine Coast. <p> <br />
+        While legal services are offered in the manner one might expect of a traditional law firm, Riba is a online lawfirm that has adopted technology in order to deliver legal advice and services in a way which is faster, more effcient and convenient than before. <p>
+        Our Skype reception is open and available during business hours so that you can communicate with lawyers face without the need to travel.
+    </div>
+</div>
 {% endblock %}
