--- a/media/riba/css/home.css
+++ b/media/riba/css/home.css
@@ -1,24 +1,272 @@
-/*home.css*/#category_menu{float:left;width:198px;border:1px solid #E47911}
-#category_menu div.store div{background-color:#E47911;padding:5px;color:#fff}
-#category_menu ul{margin:0;padding:0}
-#category_menu ul li{list-style:none;margin:0;padding:2px 3px 2px 15px}
-.home_store{float:left;padding:5px 5px 5px 5px;width:550px}
-/*.homeBanner{background-image:url('/media/images/home_banner.gif');font-family:Verdana,Arial,Helvetica,sans-serif;text-align:center;font-size:18px;width:550px;border:solid #fff}*/
-.homeAd{margin:2px;border:outset 1px #ccc;float:left;width:165px;padding:5px;text-align:center;background:}
-.homeAd img{width:100px;margin:auto}
-.hotDeals{padding-bottom:10px}
-.phone{border:solid 1px #ccc;-moz-box-shadow:3px 3px 5px black;-webkit-box-shadow:3px 3px 5px black;box-shadow:3px 3px 5px black;padding:10px;margin:5px;text-align:center;float:left}
-.phone img{width:150px}
-.home_left{float:left;width:700px;margin-right:10px}
-.home_right{float:left; /*float:right;*/width:250px}
-.home_right_title{font-weight:bold; font-size:12px; text-align:center; padding:8px 8px 0px}
-.home_right_text{border-bottom:1px dotted #ccc; padding-top:0px; color:#333; padding:8px}
-div.section{border-bottom:1px dotted #999;margin-bottom:10px}
-div.section_heading h2{font-size:14px;font-weight:bold;margin-bottom:5px}
-div.section_heading h1{margin-bottom:5px}
-.home_phone_no{height:32px;padding-left:40px;margin-top:5px;background:url(../images/sprite-img.gif) 35px -32px no-repeat; display:block;}
-.pay_opt{width:205px;height:28px;background:url(/media/images/sprite-img.gif) 0px -106px no-repeat;margin-left:15px; margin-top:5px}
-.dialog input[type="text"],.dialog input[type="password"]{margin:0px 0px 10px !important;font-size:14px;padding:2px;width:235px;background-color:#FFFFFF;border:1px solid #BBBBBB}
-.dialog input[type="submit"]{}
-div.hide_div{margin:0px 0px 10px !important 0px}
+/*home.css*/
+.txt_top_space
+{
+width:963px;
+height:27px;
+background-color:#f5f3f4;
+float:left
+}
+
+.txt_top_area
+{
+width:963px;
+height:108px;
+background-color:#f5f3f4;
+float:left
+}
+
+.lft_space
+{
+width:39px;
+height:108px;
+float:left
+}
+
+.rght_space
+{
+width:41px;
+height:108px;
+float:left
+}
+
+.top_txt
+{
+width:266px;
+height:108px;
+float:left
+}
+
+.top_txt_tab
+{
+width:266px;
+height:28px;
+background-color:#3f4c6c;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:18px;
+text-align:center;
+line-height:28px;
+color:#FFFFFF;
+float:left
+}
+
+.top_main_txt
+{
+width:266px;
+height:75px;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:12px;
+text-align:justify;
+padding-top:5px;
+float:left
+}
+
+.middle_space
+{
+width:65px;
+height:108px;
+float:left
+}
+
+.contact_img
+{
+width:247px;
+height:108px;
+float:left
+}
+
+.txt_middle_space
+{
+width:963px;
+height:32px;
+background-color:#f5f3f4;
+float:left
+}
+
+.middle_txt_area
+{
+width:963px;
+height:111px;
+background-color:#f5f3f4;
+float:left;
+}
+
+.s_lft_space
+{
+width:39px;
+height:111px;
+float:left
+}
+
+
+.s_middle_txt
+{
+width:614px;
+height:111px;
+float:left
+}
+
+.s_middle_txt_tab
+{
+width:614px;
+height:28px;
+background-color:#3f4c6c;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:18px;
+text-align:center;
+line-height:28px;
+color:#FFFFFF;
+float:left
+}
+
+.document_txt_area
+{
+width:612px;
+height:81px;
+float:left;
+border:#999999 1px solid;
+background-color:#eff5e7;
+}
+
+.document_top
+{
+width:612px;
+height:54px;
+float:left;
+border-bottom:#999999 1px solid;
+}
+
+.document_top_txt
+{
+width:193px;
+height:42px;
+border-right:#999999 1px solid;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:12px;
+color:#000000;
+padding-left:10px;
+padding-top:12px;
+line-height:18px;
+float:left
+}
+
+
+.documents_bottom_txt_area
+    {
+        width:612px;
+        height:26px;
+        float:left
+    }
+
+
+.documents_bottom_txt
+{
+    width:203px;
+    height:26px;
+    border-right:#999999 1px solid;
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+    text-align:center;
+    line-height:26px;
+    font-size:12px;
+    color:#000000;
+    float:left
+}
+
+.s_rght_space
+{
+width:22px;
+height:111px;
+float:left
+}
+
+.law_firm_img
+{
+width:247px;
+height:111px;
+float:left
+}
+
+.m_txt
+{
+width:963px;
+height:442px;
+background-color:#f5f3f4;
+float:left
+}
+
+.m_lft_space
+{
+width:39px;
+height:442px;
+float:left
+}
+
+/*************************************************Categories**********************************************/                 
+.categories_area
+{
+width:285px;
+height:442px;
+float:left
+}
+
+.categories_area_top
+{
+width:285px;
+height:28px;
+background-image:url(/media/images/web/document_img.gif);
+background-repeat:repeat-x;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:18px;
+color:#FFFFFF;
+font-weight:bold;
+text-align:center;
+line-height:28px;
+float:left;
+}
+
+.categories
+{
+width:285px;
+height:414px;
+background-image:url(/media/images/web/cat_bg.gif);
+background-repeat:repeat-x;
+float:left
+}
+
+.categories_list
+{
+width:267px;
+height:29px;
+border-bottom:#999999 1px dashed;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:14px;
+color:#FFFFFF;
+padding-left:18px;
+font-weight:bold;
+line-height:30px;
+float:left
+}
+
+/*********************************************************End Categories***********************************/                    
+
+.m_m_space
+{
+width:30px;
+height:442px;
+float:left
+}
+
+.m_main_txt_area
+{
+width:564px;
+height:422px;
+float:left;
+font-family:Verdana, Arial, Helvetica, sans-serif;
+font-size:12px;
+color:#000000;
+padding-top:20px;
+padding-left:10px;
+line-height:18px;
+background-color:#FFFFFF
+}   
+
 /*home.css end*/
