--- a/templates/riba/riba-admin/document/view_question_details.html
+++ b/templates/riba/riba-admin/document/view_question_details.html
@@ -1,5 +1,19 @@
 <style>
     .label {
+        width:50px;
+        vertical-align:middle;
+    }
+
+    .value {
+        width: 300px;
+        vertical-align:middle;
+    }
+
+    .value select {
+        width: 150px;
+    }
+
+    .value input[type="checkbox"] {
         width: 50px;
     }
 </style>
@@ -12,15 +26,15 @@
                 <td class="label">Keyword</td>
                 <td class="value">
                     <select id="id_questionnaire_set-{{question.id}}-keyword" name="questionnaire-{{question.id}}-keyword">
-                        <option value selected="selected">--------</option>
+                        <option value {% if not qn.keyword %}selected="selected"{% endif %}>--------</option>
                         {% for k in keywords %}
-                            <option value={{k.id}}>{{k.keyword}}</option>
+                            <option value="{{k.id}}" {%ifequal qn.keyword k%}selected="selected"{%endifequal%}>{{k.keyword}}</option>
                         {% endfor %}
                     </select>
                 </td>
                 <td class="label">Mandatory</td>
                 <td class="value">
-                    <input type="checkbox" id="id_questionnaire-{{question.id}}-mandatory" name="questionnaire-{{question.id}}-mandatory"></input>
+                    <input type="checkbox" id="id_questionnaire-{{question.id}}-mandatory" name="questionnaire-{{question.id}}-mandatory" value={{qn.mandatory}}></input>
                 </td>
             </tr>
             {% for q, fields in child_details.iteritems %}
@@ -32,19 +46,19 @@
                     {% for f in fields %}
                     <tr>
                         <td class="label">Field</td>
-                        <td class="value"><input type="hidden" id="id_questionnaire-{{f.id}}-field" name="questionnaire-{{f.id}}-field" value="{{f.id}}">{{f.field_label}}</td>
+                        <td class="value"><input type="hidden" id="id_questionnaire-{{f.field.id}}-field" name="questionnaire-{{f.field.id}}-field" value="{{f.field.id}}">{{f.field.field_label}}</td>
                         <td class="label">Keyword</td>
                         <td class="value">
-                            <select id="id_questionnaire-{{f.id}}-keyword" name="questionnaire-{{f.id}}-keyword">
-                                <option value selected="selected">--------</option>
-                                {% for k in keywords %}
-                                    <option value={{k.id}}>{{k.keyword}}</option>
-                                {% endfor %}
+                            <select id="id_questionnaire-{{f.field.id}}-keyword" name="questionnaire-{{f.field.id}}-keyword">
+                                <option value {% if not f.keyword %}selected="selected"{% endif %}>--------</option>
+                                    {% for k in keywords %}
+                                        <option value="{{k.id}}" {%ifequal f.keyword k%}selected="selected"{%endifequal%}>{{k.keyword}}</option>
+                                    {% endfor %}
                             </select>
                         </td>
                         <td class="label">Mandatory</td>
                         <td class="value">
-                            <input type="checkbox" id="id_questionnaire-{{f.id}}-mandatory" name="questionnaire-{{f.id}}-mandatory"></input>
+                            <input type="checkbox" id="id_questionnaire-{{f.field.id}}-mandatory" name="questionnaire-{{f.field.id}}-mandatory" value={{f.mandatory}}></input>
                         </td>
                     </tr>
                     {% endfor %}
@@ -52,15 +66,15 @@
                     <td class="label">Keyword</td>
                     <td class="value">
                         <select id="id_questionnaire_set-{{q.id}}-keyword" name="questionnaire-{{q.id}}-keyword">
-                            <option value selected="selected">--------</option>
+                            <option value {% if not qn.keyword %}selected="selected"{% endif %}>--------</option>
                             {% for k in keywords %}
-                                <option value={{k.id}}>{{k.keyword}}</option>
+                                <option value="{{k.id}}" {%ifequal qn.keyword k%}selected="selected"{%endifequal%}>{{k.keyword}}</option>
                             {% endfor %}
                         </select>
                     </td>
                     <td class="label">Mandatory</td>
                     <td class="value">
-                        <input type="checkbox" id="id_questionnaire-{{q.id}}-mandatory" name="questionnaire-{{q.id}}-mandatory"></input>
+                        <input type="checkbox" id="id_questionnaire-{{q.id}}-mandatory" name="questionnaire-{{q.id}}-mandatory" value={{qn.mandatory}}></input>
                     </td>
                 </tr>
                 {% endif %}
@@ -70,19 +84,19 @@
                 {% for f in fields %}
                     <tr>
                         <td class="label">Field</td>
-                        <td class="value"><input type="hidden" id="id_questionnaire-{{f.id}}-field" name="questionnaire-{{f.id}}-field" value="{{f.id}}">{{f.field_label}}</td>
+                        <td class="value"><input type="hidden" id="id_questionnaire-{{f.field.id}}-field" name="questionnaire-{{f.field.id}}-field" value="{{f.field.id}}">{{f.field.field_label}}</td>
                         <td class="label">Keyword</td>
                         <td class="value">
-                            <select id="id_questionnaire-{{f.id}}-keyword" name="questionnaire-{{f.id}}-keyword">
-                                <option value selected="selected">--------</option>
+                            <select id="id_questionnaire-{{f.field.id}}-keyword" name="questionnaire-{{f.field.id}}-keyword">
+                                <option value {% if not f.keyword %}selected="selected"{% endif %}>--------</option>
                                 {% for k in keywords %}
-                                    <option value={{k.id}}>{{k.keyword}}</option>
+                                    <option value="{{k.id}}" {%ifequal f.keyword k%}selected="selected"{%endifequal%}>{{k.keyword}}</option>
                                 {% endfor %}
                             </select>
                         </td>
                         <td class="label">Mandatory</td>
                         <td class="value">
-                            <input type="checkbox" id="id_questionnaire-{{f.id}}-mandatory" name="questionnaire-{{f.id}}-mandatory"></input>
+                            <input type="checkbox" id="id_questionnaire-{{f.field.id}}-mandatory" name="questionnaire-{{f.field.id}}-mandatory" value="{{f.mandatory}}"></input>
                         </td>
                     </tr>
                     {% endfor %}
@@ -91,15 +105,15 @@
                     <td class="label">Keyword</td>
                     <td class="value">
                         <select id="id_questionnaire-{{question.id}}-keyword" name="questionnaire-{{question.id}}-keyword">
-                            <option value selected="selected">--------</option>
+                            <option value {% if not qn.keyword %}selected="selected"{% endif %}>--------</option>
                             {% for k in keywords %}
-                                <option value={{k.id}}>{{k.keyword}}</option>
+                                <option value="{{k.id}}" {%ifequal qn.keyword k%}selected="selected"{%endifequal%}>{{k.keyword}}</option>
                             {% endfor %}
                         </select>
                     </td>
                     <td class="label">Mandatory</td>
                     <td class="value">
-                        <input type="checkbox" id="id_questionnaire-{{question.id}}-mandatory" name="questionnaire-{{question.id}}-mandatory"></input>
+                        <input type="checkbox" id="id_questionnaire-{{question.id}}-mandatory" name="questionnaire-{{question.id}}-mandatory" value={{qn.mandatory}}></input>
                     </td>
                 </tr>
             {% endif %}
